# auteur

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CUsersAdminAppDataLocalTempclaudeH--GithubRepositories-auteur62865e61-062c-4434-9de4-6f441dc6a9bascratchpadtest_validate_choices.py  CUsersAdminAppDataLocalTempclaudeH--GithubRepositories-auteurd6aadb61-c0c3-4308-a4ab-6bfad899251cscratchpadtest_output.txt  HANDOFF.md  HGithubRepositoriesauteurAGENTS.md  README.md  _fix_ctx.py  chat_export_20260512_021327.md  gentle_femdom_narrative_output.yaml  pyproject.toml  test_gentlefemdom_demo.py
.claude/: launch.json  settings.json
artifacts/: agent_brief.md  completion_summary.md  domain_alignment_report.md  issue_list.md  plan_full-fog-workflow.md  prd.md  problem_frame.md  repository_sensemaking_brief.md  run_log_full-fog-workflow_guided_execution.md  unknowns_map.md
demo/: blueprint.yaml  proposal.json  story_identity.yaml
docs/: PRD-V1-Sensemaking.md  agent-brief-domain-alignment.md  architecture-constitution.md  architecture-product-completion-review.md  architecture-roadmap.md  architecture.md  artifacts.md  book-expression.md  book-reconciliation-application.md  book-reconciliation.md  capability-coverage.md  conceptual-grill-adapted-skills.md  critic-integration-contract.md  critic-registry.md  engine-v1-workflow.md  expression-boundary.md  expression-composition.md  expression-reconciliation-acceptance.md  expression-reconciliation-application.md  expression-reconciliation.md  genre-overrides.md  issue-list-domain-alignment.md  llm-adapters.md  mode-coverage.yaml  narrative-architecture.md  next-step-discovery.md  opinionated-narrative-engine.md  pilot-report.md  prd-story-grill-skill.md  (+19 more)
(+892 files in other folders)
