[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auteur"
version = "0.1.0"
description = "Agentic narrative engineering: a literary compiler for long-form fiction."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
all = ["anthropic>=0.39", "openai>=1.40"]

[project.scripts]
auteur = "auteur.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auteur"]
