[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auteur"
version = "0.3.1"
description = "Agentic narrative engineering: a literary compiler for long-form fiction."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.0"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
all = ["anthropic>=0.39", "openai>=1.40", "pytest-xdist>=3.0"]

[project.scripts]
auteur = "auteur.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auteur"]

[tool.hatch.build.targets.sdist]
include = ["src/auteur/data/"]

[tool.pytest.ini_options]
addopts = "-q --tb=short -W ignore::UserWarning"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["src/auteur/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/auteur"]
omit = ["src/auteur/**/test_*", "src/auteur/**/browser/*"]
